--- a/homework/Day_034_HW.ipynb
+++ b/homework/Day_034_HW.ipynb
@@ -178,6 +178,7 @@
     }
    ],
    "source": [
+    "#使用 concatenate 將 array 進行合併\n",
     "X_train, y_train = np.concatenate([X_train_y1, X_train_y0]), np.concatenate([y_train_y1, y_train_y0])\n",
     "X_test, y_test = np.concatenate([X_test_y1, X_test_y0]), np.concatenate([y_test_y1, y_test_y0])\n",
     "y_test"
