--- a/homework/Day_041_HW.ipynb
+++ b/homework/Day_041_HW.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "Ans1: 若對於決策樹沒有任何限制，是可以為每個訓練樣本找到對應的rule，則training loss可降為 0 (training loss為訓練集在模型中的預測結果和真實答案的誤差)<br>\n",
-    "Ans2: 決策樹演算法也可以像迴歸分析一樣，預測的結果呈現的是一個實數(例如：身高、體重)，這種決策樹就稱為迴歸樹(Regression Tree)。"
+    "Ans2: 決策樹演算法也可以像迴歸分析一樣，預測的結果呈現的是一個實數(例如：身高、體重)，這種決策樹就稱為迴歸樹(Regression Tree)。資料的相似程度改用該群的平均數為每個值計算差距。"
    ]
   },
   {
