--- a/homework/Day_043_HW.ipynb
+++ b/homework/Day_043_HW.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "Ans1: 隨機森林會沒有任何限制的讓樹持續生長，讓模型變得非常複雜，最後再透過投票的方式處理overfitting的問題。<br>\n",
-    "Ans2: 使用取出放回的方式，抽出與資料量一樣 N 筆資料，約使用 0.632 的原資料。\n",
+    "Ans2: 使用取出放回的方式，抽出與資料量一樣 N 筆資料，約使用 0.632 不重覆的原資料。(http://sofasofa.io/forum_main_post.php?postid=1000691)\n",
     "![123.JPG](attachment:123.JPG)"
    ]
   },
