--- a/homework/Day_047_HW.ipynb
+++ b/homework/Day_047_HW.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 作業\n",
-    "\n",
-    "1. 試著調整 RandomForestClassifier(...) 中的參數，並觀察是否會改變結果？\n",
-    "2. 改用其他資料集 (boston, wine)，並與回歸模型與決策樹的結果進行比較"
+    "# 作業\n",
+    "請使用不同的資料集，並使用 hyper-parameter search 的方式，看能不能找出最佳的超參數組合"
    ]
   },
   {
@@ -21,368 +19,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn import datasets\n",
-    "# 如果是分類問題，請使用 RandomForestClassifier，若為回歸問題，請使用 RandomForestRegressor\n",
-    "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score"
+    "from sklearn import datasets, metrics\n",
+    "from sklearn.model_selection import train_test_split, KFold, GridSearchCV\n",
+    "from sklearn.ensemble import GradientBoostingClassifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['data', 'target', 'feature_names', 'DESCR'])\n",
-      "Boston House Prices dataset\n",
-      "===========================\n",
-      "\n",
-      "Notes\n",
-      "------\n",
-      "Data Set Characteristics:  \n",
-      "\n",
-      "    :Number of Instances: 506 \n",
-      "\n",
-      "    :Number of Attributes: 13 numeric/categorical predictive\n",
-      "    \n",
-      "    :Median Value (attribute 14) is usually the target\n",
-      "\n",
-      "    :Attribute Information (in order):\n",
-      "        - CRIM     per capita crime rate by town\n",
-      "        - ZN       proportion of residential land zoned for lots over 25,000 sq.ft.\n",
-      "        - INDUS    proportion of non-retail business acres per town\n",
-      "        - CHAS     Charles River dummy variable (= 1 if tract bounds river; 0 otherwise)\n",
-      "        - NOX      nitric oxides concentration (parts per 10 million)\n",
-      "        - RM       average number of rooms per dwelling\n",
-      "        - AGE      proportion of owner-occupied units built prior to 1940\n",
-      "        - DIS      weighted distances to five Boston employment centres\n",
-      "        - RAD      index of accessibility to radial highways\n",
-      "        - TAX      full-value property-tax rate per $10,000\n",
-      "        - PTRATIO  pupil-teacher ratio by town\n",
-      "        - B        1000(Bk - 0.63)^2 where Bk is the proportion of blacks by town\n",
-      "        - LSTAT    % lower status of the population\n",
-      "        - MEDV     Median value of owner-occupied homes in $1000's\n",
-      "\n",
-      "    :Missing Attribute Values: None\n",
-      "\n",
-      "    :Creator: Harrison, D. and Rubinfeld, D.L.\n",
-      "\n",
-      "This is a copy of UCI ML housing dataset.\n",
-      "http://archive.ics.uci.edu/ml/datasets/Housing\n",
-      "\n",
-      "\n",
-      "This dataset was taken from the StatLib library which is maintained at Carnegie Mellon University.\n",
-      "\n",
-      "The Boston house-price data of Harrison, D. and Rubinfeld, D.L. 'Hedonic\n",
-      "prices and the demand for clean air', J. Environ. Economics & Management,\n",
-      "vol.5, 81-102, 1978.   Used in Belsley, Kuh & Welsch, 'Regression diagnostics\n",
-      "...', Wiley, 1980.   N.B. Various transformations are used in the table on\n",
-      "pages 244-261 of the latter.\n",
-      "\n",
-      "The Boston house-price data has been used in many machine learning papers that address regression\n",
-      "problems.   \n",
-      "     \n",
-      "**References**\n",
-      "\n",
-      "   - Belsley, Kuh & Welsch, 'Regression diagnostics: Identifying Influential Data and Sources of Collinearity', Wiley, 1980. 244-261.\n",
-      "   - Quinlan,R. (1993). Combining Instance-Based and Model-Based Learning. In Proceedings on the Tenth International Conference of Machine Learning, 236-243, University of Massachusetts, Amherst. Morgan Kaufmann.\n",
-      "   - many more! (see http://archive.ics.uci.edu/ml/datasets/Housing)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "boston = datasets.load_boston()\n",
-    "print(boston.keys())\n",
-    "print(boston[\"DESCR\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "data就是資料內容，feature_names就是欄位名稱，DESCR為資料的說明"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CRIM</th>\n",
-       "      <th>ZN</th>\n",
-       "      <th>INDUS</th>\n",
-       "      <th>CHAS</th>\n",
-       "      <th>NOX</th>\n",
-       "      <th>RM</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>DIS</th>\n",
-       "      <th>RAD</th>\n",
-       "      <th>TAX</th>\n",
-       "      <th>PTRATIO</th>\n",
-       "      <th>B</th>\n",
-       "      <th>LSTAT</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.00632</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>2.31</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.538</td>\n",
-       "      <td>6.575</td>\n",
-       "      <td>65.2</td>\n",
-       "      <td>4.0900</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>296.0</td>\n",
-       "      <td>15.3</td>\n",
-       "      <td>396.90</td>\n",
-       "      <td>4.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.02731</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.07</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.469</td>\n",
-       "      <td>6.421</td>\n",
-       "      <td>78.9</td>\n",
-       "      <td>4.9671</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>242.0</td>\n",
-       "      <td>17.8</td>\n",
-       "      <td>396.90</td>\n",
-       "      <td>9.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.02729</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.07</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.469</td>\n",
-       "      <td>7.185</td>\n",
-       "      <td>61.1</td>\n",
-       "      <td>4.9671</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>242.0</td>\n",
-       "      <td>17.8</td>\n",
-       "      <td>392.83</td>\n",
-       "      <td>4.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.03237</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.458</td>\n",
-       "      <td>6.998</td>\n",
-       "      <td>45.8</td>\n",
-       "      <td>6.0622</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>222.0</td>\n",
-       "      <td>18.7</td>\n",
-       "      <td>394.63</td>\n",
-       "      <td>2.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.06905</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.458</td>\n",
-       "      <td>7.147</td>\n",
-       "      <td>54.2</td>\n",
-       "      <td>6.0622</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>222.0</td>\n",
-       "      <td>18.7</td>\n",
-       "      <td>396.90</td>\n",
-       "      <td>5.33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE     DIS  RAD    TAX  \\\n",
-       "0  0.00632  18.0   2.31   0.0  0.538  6.575  65.2  4.0900  1.0  296.0   \n",
-       "1  0.02731   0.0   7.07   0.0  0.469  6.421  78.9  4.9671  2.0  242.0   \n",
-       "2  0.02729   0.0   7.07   0.0  0.469  7.185  61.1  4.9671  2.0  242.0   \n",
-       "3  0.03237   0.0   2.18   0.0  0.458  6.998  45.8  6.0622  3.0  222.0   \n",
-       "4  0.06905   0.0   2.18   0.0  0.458  7.147  54.2  6.0622  3.0  222.0   \n",
-       "\n",
-       "   PTRATIO       B  LSTAT  \n",
-       "0     15.3  396.90   4.98  \n",
-       "1     17.8  396.90   9.14  \n",
-       "2     17.8  392.83   4.03  \n",
-       "3     18.7  394.63   2.94  \n",
-       "4     18.7  396.90   5.33  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#觀察資料內容\n",
-    "boston_X = pd.DataFrame(boston[\"data\"], columns = boston[\"feature_names\"])\n",
-    "boston_X.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>21.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>33.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>36.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   target\n",
-       "0    24.0\n",
-       "1    21.6\n",
-       "2    34.7\n",
-       "3    33.4\n",
-       "4    36.2"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#觀察 target 內容\n",
-    "boston_y = pd.DataFrame(boston[\"target\"], columns = [\"target\"])\n",
-    "boston_y.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:7: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  import sys\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 切分訓練集/測試集\n",
-    "#x_train, x_test, y_train, y_test = train_test_split(boston.data, boston.target, test_size=0.2, random_state=4)\n",
-    "x_train, x_test, y_train, y_test = train_test_split(boston_X, boston_y, test_size=0.2, random_state=4)\n",
-    "# 建立模型\n",
-    "regr = RandomForestRegressor()\n",
-    "# 訓練模型\n",
-    "regr.fit(x_train, y_train)\n",
-    "# 預測測試集\n",
-    "y_pred = regr.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean squared error: 17.11\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 預測值與實際值的差距，使用 MSE\n",
-    "print(\"Mean squared error: %.2f\"\n",
-    "      % mean_squared_error(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -518,8 +162,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "data就是資料內容，feature_names就是欄位名稱，DESCR為資料的說明"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +389,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +498,7 @@
        "4       0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,94 +510,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  \n"
+      "Accuracy:  0.9385964912280702\n"
      ]
     }
    ],
    "source": [
     "# 切分訓練集/測試集\n",
-    "x_train, x_test, y_train, y_test = train_test_split(cancer_X, cancer_Y, test_size=0.2, random_state=4)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(breast_cancer.data, breast_cancer.target, test_size=0.2, random_state=4)\n",
     "# 建立模型\n",
-    "clf = RandomForestClassifier()\n",
+    "clf = GradientBoostingClassifier()\n",
     "# 訓練模型\n",
     "clf.fit(x_train, y_train)\n",
     "# 預測測試集\n",
-    "y_pred = clf.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Acuuracy:  0.9035087719298246\n"
-     ]
-    }
-   ],
-   "source": [
-    "acc = accuracy_score(y_test, y_pred)\n",
+    "y_pred = clf.predict(x_test)\n",
+    "\n",
+    "acc = metrics.accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy: \", acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['mean radius' 'mean texture' 'mean perimeter' 'mean area'\n",
-      " 'mean smoothness' 'mean compactness' 'mean concavity'\n",
-      " 'mean concave points' 'mean symmetry' 'mean fractal dimension'\n",
-      " 'radius error' 'texture error' 'perimeter error' 'area error'\n",
-      " 'smoothness error' 'compactness error' 'concavity error'\n",
-      " 'concave points error' 'symmetry error' 'fractal dimension error'\n",
-      " 'worst radius' 'worst texture' 'worst perimeter' 'worst area'\n",
-      " 'worst smoothness' 'worst compactness' 'worst concavity'\n",
-      " 'worst concave points' 'worst symmetry' 'worst fractal dimension']\n"
+      "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done  27 out of  27 | elapsed:    1.4s finished\n"
      ]
     }
    ],
    "source": [
-    "print(breast_cancer.feature_names)"
+    "# 設定要訓練的超參數組合\n",
+    "n_estimators = [50, 100, 150]\n",
+    "max_depth = [1, 3, 5]\n",
+    "param_grid = dict(n_estimators=n_estimators, max_depth=max_depth)\n",
+    "\n",
+    "# 建立搜尋物件，放入模型及參數組合字典 (n_jobs=-1 會使用全部 cpu 平行運算)\n",
+    "grid_search = GridSearchCV(clf, param_grid, scoring=\"accuracy\", n_jobs=-1, verbose=1)\n",
+    "\n",
+    "# 開始搜尋最佳參數\n",
+    "grid_result = grid_search.fit(x_train, y_train)\n",
+    "\n",
+    "# 預設會跑 3-fold cross-validadtion，總共 9 種參數組合，總共要 train 27 次模型"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature importance:  [1.21337431e-01 6.89918048e-03 9.14707196e-03 9.70449097e-03\n",
-      " 1.52908282e-04 6.11633128e-04 3.37861152e-02 1.55306305e-01\n",
-      " 8.98006656e-03 1.01567654e-02 1.43952809e-02 4.70115729e-03\n",
-      " 4.14424655e-02 1.24606960e-01 3.40926975e-03 7.17153560e-03\n",
-      " 6.03360252e-04 1.77510286e-03 1.03190685e-03 4.26364435e-03\n",
-      " 1.97263314e-01 9.24396296e-03 1.95799922e-02 1.02292123e-01\n",
-      " 1.45644316e-02 3.05549768e-02 1.57272989e-02 2.93477112e-02\n",
-      " 2.08663356e-02 1.07720145e-03]\n"
+      "Best Accuracy: 0.960440 using {'max_depth': 1, 'n_estimators': 150}\n"
      ]
     }
    ],
    "source": [
-    "print(\"Feature importance: \", clf.feature_importances_)"
+    "# 印出最佳結果與最佳參數\n",
+    "print(\"Best Accuracy: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 使用最佳參數重新建立模型\n",
+    "clf_bestparam = GradientBoostingClassifier(max_depth=grid_result.best_params_['max_depth'], n_estimators=grid_result.best_params_['n_estimators'])\n",
+    "\n",
+    "# 訓練模型\n",
+    "clf_bestparam.fit(x_train, y_train)\n",
+    "\n",
+    "# 預測測試集\n",
+    "y_pred = clf_bestparam.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.9473684210526315\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy: \", acc)"
    ]
   },
   {
