--- a/homework/Day_048_HW.ipynb
+++ b/homework/Day_048_HW.ipynb
@@ -40,7 +40,7 @@
     "f_train_label = os.path.join(dir_data, 'trainLabels.csv')\n",
     "f_test = os.path.join(dir_data, 'test.csv')\n",
     "\n",
-    "train = pd.read_csv(f_train, header=None)\n",
+    "train = pd.read_csv(f_train, header=None)  #header=None 原資料沒有欄位名稱\n",
     "train_label = pd.read_csv(f_train_label, header=None)\n",
     "test = pd.read_csv(f_test, header=None)\n",
     "print('train shape:', train.shape)\n",
@@ -260,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 切分訓練集/測試集\n",
@@ -283,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.716\n"
+      "Accuracy:  0.732\n"
      ]
     }
    ],
@@ -312,6 +314,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.848\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -327,7 +336,9 @@
     "clf.fit(x_train, y_train)\n",
     "# 預測測試集\n",
     "y_pred = clf.predict(x_test)\n",
-    "\n"
+    "\n",
+    "acc = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy: \", acc)"
    ]
   },
   {
@@ -354,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.88\n"
+      "Accuracy:  0.876\n"
      ]
     }
    ],
